<resources>
    <string name="default_web_client_id">430409761504-ubtua0qa7mmpk5v0svoifr5btcgov465.apps.googleusercontent.com</string>
    <string name="app_name">CineZone</string>
    <string name="logo">Logo</string>
    <string name="close">Close</string>
    <string name="change_language">English</string>
    <string name="change_theme">Change theme</string>
    <string name="night_mode">Night Mode On</string>
    <string name="day_mode">Day Mode On</string>
    <string name="start">Start</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="intro">Explore a diverse library of movies and TV shows, indulge in millions of options</string>
    <string name="sub_intro">Flexible movie viewing experience, store your favorites and enjoy them anytime</string>
    <string name="avt">Avatar</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="full_name">Full Name</string>
    <string name="display_name">Name displayed on profile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_url_avt">Your URL avatar</string>
    <string name="enter_first_name">Your first name</string>
    <string name="enter_last_name">Your last name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="remember_password">Remember password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="send_verification_code">Send verification code</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_gg">Sign in with Google</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="create_acc">Create new account</string>
    <string name="create_info">Enter your personal information to create an account</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="welcome_info">Sign in to your account to continue</string>
    <string name="signin_prompt">Already have an account? Sign in</string>
    <string name="signup_prompt">Don\'t have an account? Sign up</string>
    <string name="return_to_login">Return to Sign in</string>
    <string name="arrow_description">Arrow</string>
    <string name="trend">Currently trending</string>
    <string name="genre">Genre :</string>
    <string name="movie_theater">Movie theater</string>
    <string name="coming_soon">Coming soon</string>
    <string name="trailer">Trailer</string>
    <string name="watch">Watch</string>
    <string name="rating">Rating</string>
    <string name="views">views</string>
    <string name="ratings">ratings</string>
    <string name="actor">Actor</string>
    <string name="similar_content">Similar content</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="season">Season :</string>
    <string name="episode">Episode :</string>
    <string name="country">Country :</string>
    <string name="directors">Directors :</string>
    <string name="production_companies">Production Companies :</string>
    <string name="back_press_exit_message">Press again to exit</string>
    <string name="ad_manage">Manage (Admin)</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="all">All</string>
    <string name="no_history">No history</string>
    <string name="just_now">Just now</string>
    <string name="minutes_ago">Viewed %1$d minutes ago</string>
    <string name="hours_ago">Viewed %1$d hours ago</string>
    <string name="days_ago">Viewed %1$d days ago</string>
    <string name="weeks_ago">Viewed %1$d weeks ago</string>
    <string name="months_ago">Viewed %1$d months ago</string>
    <string name="years_ago">Viewed %1$d years ago</string>
</resources>