<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Email Address Label -->
    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/mainColor"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_container"
        tools:ignore="NotSibling" />

    <!-- Email Address Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        app:boxStrokeColor="@color/mainColor"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusTopStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:hintEnabled="false"
        app:helperTextEnabled="false"
        app:errorEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:text="@string/send_verification_code"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/mainColor"
        app:cornerRadius="50dp"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvReturnToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_to_login"
            android:textColor="@color/mainColor"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="4dp" />

        <ImageView
            android:id="@+id/ivArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"
            android:contentDescription="@string/arrow_description"
            app:tint="@color/mainColor" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>