<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Avatar -->
    <TextView
        android:id="@+id/profileDetailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@color/mainColor"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Avatar -->
    <TextView
        android:id="@+id/avatarLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avt"
        android:textColor="@color/mainColor"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/profileDetailLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:clipToOutline="true"
        android:layout_gravity="center"
        app:shapeAppearanceOverlay="@style/CircularShape"
        app:strokeColor="@color/textColor"
        app:strokeWidth="2dp"
        app:layout_constraintTop_toBottomOf="@id/avatarLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/urlAvatarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="14dp"
        app:boxStrokeColor="@color/box_stroke_color_selector"
        app:boxBackgroundColor="@color/backgroundColor"
        app:boxCornerRadiusTopStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:hintEnabled="false"
        app:helperTextEnabled="false"
        app:errorEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/ivAvatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUrlAvatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_url_avt"
            android:textColorHint="@color/grey"
            android:textColor="@color/textColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- First Name Label -->
    <TextView
        android:id="@+id/firstNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/first_name"
        android:textColor="@color/mainColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/urlAvatarLayout" />

    <!-- First Name Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="14dp"
        app:boxStrokeColor="@color/box_stroke_color_selector"
        app:boxBackgroundColor="@color/backgroundColor"
        app:boxCornerRadiusTopStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:hintEnabled="false"
        app:helperTextEnabled="false"
        app:errorEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstNameLabel"
        app:layout_constraintWidth_percent="0.45">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_first_name"
            android:textColorHint="@color/grey"
            android:textColor="@color/textColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Last Name Label -->
    <TextView
        android:id="@+id/lastNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/last_name"
        android:textColor="@color/mainColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/firstNameLayout"
        app:layout_constraintTop_toTopOf="@id/firstNameLabel" />

    <!-- Last Name Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        app:boxStrokeColor="@color/box_stroke_color_selector"
        app:boxBackgroundColor="@color/backgroundColor"
        app:boxCornerRadiusTopStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:hintEnabled="false"
        app:helperTextEnabled="false"
        app:errorEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/firstNameLayout"
        app:layout_constraintTop_toBottomOf="@id/lastNameLabel"
        app:layout_constraintWidth_percent="0.45">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_last_name"
            android:textColorHint="@color/grey"
            android:textColor="@color/textColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Full Name Label -->
    <TextView
        android:id="@+id/fullNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_name"
        android:textColor="@color/mainColor"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstNameLayout" />

    <!-- Full Name Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullNameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="14dp"
        app:boxStrokeColor="@color/mainColor"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusTopStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:hintEnabled="false"
        app:helperTextEnabled="false"
        app:errorEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullNameLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etfullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:textColor="@color/black"
            android:backgroundTint="@color/grey"
            android:enabled="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email Address Label -->
    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/mainColor"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullNameLayout" />

    <!-- Email Address Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="14dp"
        app:boxStrokeColor="@color/mainColor"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusTopStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:hintEnabled="false"
        app:helperTextEnabled="false"
        app:errorEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:backgroundTint="@color/grey"
            android:enabled="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:background="@drawable/rounded_button_trailer"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/mainColor"
            android:gravity="center" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/btnUpdate"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:background="@drawable/rounded_button_watch"
            android:text="@string/update"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:gravity="center" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>