<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <!-- Import TopHeader -->
    <com.khiemnv.cinezone.component.TopHeader
        android:id="@+id/topHeaderLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/intro"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:textSize="30sp"
        android:textColor="@color/textColor"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sub_intro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/sub_intro"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/sub_intro"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/btnStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:layout_marginBottom="20dp"
        android:text="@string/start"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:backgroundTint="@color/mainColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.95"
        app:cornerRadius="2dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
